--- a/app/templates/admin_employee.html
+++ b/app/templates/admin_employee.html
@@ -25,13 +25,12 @@
 
             <!-- add employee form -->
             <div id="employee_tb-form_container_modal-add_new_employee" class="form active">
-                <h3>Add a new employee:</h3>
+                <h3>Add a new employee</h3>
                 <div class="form-content-container">
 
                     <input id="_csrf_token" name=_csrf_token type=hidden value="{{ csrf_token() }}">
 
-                    <p>{{ csrf_token() }}</p>
-                    <p>{{ csrf_token() }}</p>
+                    <p id="CSRF_PARAGRAPH">{{ csrf_token() }}</p>
 
                     <p>Employee Data</p>
 
@@ -166,8 +165,6 @@
     <!-- Table of employees -->
 
         <div id="employee_table_container">
-
-                {{ form.name.label }} {{ form.name(size=20) }}
 
         
         </div>
